<resources>
    <string name="app_name">Periodic Table Professor</string>
    <string name="app_description">An Android app that will help you memorize and associate name, atomic number and symbol of elements in the Periodic Table.</string>

    <string name="nav_study">Study</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_periodic_table">Periodic table</string>
    <string name="nav_about">About</string>
    <string name="nav_tutorial">Tutorial</string>

    <string name="ok">OK"</string>
    <string name="cancel">Cancel</string>
    <string name="reload">Reload</string>

    <string name="error_message_default">Oops, there was an error fetching the data</string>
    <string name="error_message_default_button">Try again</string>
    <string name="error_message_all_cards_are_new">You haven\'t added any cards yet, would you like to start learning?</string>
    <string name="error_message_all_cards_are_new_button">Yes, load the first card</string>
    <string name="error_message_no_cards_due_soon">No cards due soon! Looks like you\'ve done your job. Your next card is due in %1$s. Today, you have already loaded %2$d new cards.</string>
    <string name="error_message_no_cards_due_soon_button_load_new">Load a new card now</string>
    <string name="error_message_no_cards_due_soon_button_reload">@string/reload</string>
    <string name="error_message_no_cards_are_new">No cards are new, you know it all. Congratulations!</string>
    <string name="error_message_invalid_element">Invalid element requested!</string>

    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>

    <string name="check">Check</string>

    <string name="performance_easy">Easy</string>
    <string name="performance_medium">Medium</string>
    <string name="performance_hard">Hard</string>
    <string name="performance_failed">Failed</string>

    <string name="element_property_group_general">General properties</string>
    <string name="element_property_group_physical_chemical">Physical and chemical properties</string>
    <string name="element_property_group_geological">Geological properties</string>
    <string name="element_property_group_mnemonic">Mnemonic</string>

    <string name="element_property_name_abundance_crust">Abundance in Earth\'s crust</string>
    <string name="element_property_name_abundance_sea">Abundance in sea</string>
    <string name="element_property_name_atomic_number">Atomic number</string>
    <string name="element_property_name_atomic_radius">Atomic radius</string>
    <string name="element_property_name_atomic_weight">Atomic weight</string>
    <string name="element_property_name_description">Description</string>
    <string name="element_property_name_discoverers">Discoverers</string>
    <string name="element_property_name_discovery_location">Discovery location</string>
    <string name="element_property_name_discovery_year">Discovery year</string>
    <string name="element_property_name_electronic_configuration">Electronic configuration</string>
    <string name="element_property_name_en_pauling">Electronegativity (Pauling)</string>
    <string name="element_property_name_is_radioactive">Is radioactive?</string>
    <string name="element_property_name_name">Name</string>
    <string name="element_property_name_name_origin">Name origin</string>
    <string name="element_property_name_sources">Sources</string>
    <string name="element_property_name_symbol">Symbol</string>
    <string name="element_property_name_uses">Uses</string>
    <string name="element_property_name_vdw_radius">Van Der Waals radius</string>

    <string name="element_property_name_mnemonic_phrase">Mnemonic description</string>

    <string-array name="table_spinner_element_one_line_properties">
        <item>@string/element_property_name_abundance_crust</item>
        <item>@string/element_property_name_abundance_sea</item>
        <item>@string/element_property_name_atomic_radius</item>
        <item>@string/element_property_name_atomic_weight</item>
        <item>@string/element_property_name_discovery_location</item>
        <item>@string/element_property_name_discovery_year</item>
        <item>@string/element_property_name_electronic_configuration</item>
        <item>@string/element_property_name_en_pauling</item>
        <item>@string/element_property_name_name</item>
        <item>@string/element_property_name_vdw_radius</item>
    </string-array>

    <string name="review_appbar_extra_counts">Reviewable now: %1$d, today: %2$d</string>

    <string name="tutorial_welcome_title">Welcome</string>
    <string name="tutorial_welcome_content">This app will will help you memorize and associate name, atomic number and symbol of elements in the Periodic Table.</string>
    <string name="tutorial_cards_title">Cards</string>
    <string name="tutorial_cards_content">A card constitutes a mnemonic mean to memorize the name, atomic number and symbol for an element. The picture is designed to remind you of the data, and a sentence tells you how to use the image to memorize the element.</string>
    <string name="tutorial_reviewing_title">Reviewing</string>
    <string name="tutorial_reviewing_content">When using this app, you are studying. The app will first show you only one part of the card. You have to remind the other ones, and check whether you are correct or not.</string>
    <string name="tutorial_intervals_title">Intervals</string>
    <string name="tutorial_intervals_content">You then evaluate your performance. The algorithm will determine, based on your performance history, when you should review this card again. The app will let you review the card when the algorithm thinks is best.</string>

</resources>