<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/review_appbar_extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        tools:text="Reviewable now: 19, today: 118"/>

    <com.tiixel.periodictableprofessor.widget.error.ErrorView
        android:id="@+id/review_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:visibility="gone"/>

    <android.support.v7.widget.CardView
        android:id="@+id/review_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_appbar_extra"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:cardElevation="1dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <com.tiixel.periodictableprofessor.widget.periodictable.PeriodicTableView
                        android:id="@+id/review_periodic_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:drawDetails="false"
                        tools:layout_height="110dp"/>

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <ImageView
                    android:id="@+id/review_mnemonic_picture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="Card visual memory help"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:scaleType="fitXY"/>

            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/review_atomic_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="@id/review_symbol"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/review_symbol"
                    tools:text="98"/>

                <TextView
                    android:id="@+id/review_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    app:layout_constraintLeft_toRightOf="@id/review_atomic_number"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="Cf"/>

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/review_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                tools:text="Californium"/>

            <TextView
                android:id="@+id/review_mnemonic_phrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                tools:maxLines="5"
                tools:text="@tools:sample/lorem/random"/>

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/review_user_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                tools:maxLines="3"
                tools:text="@tools:sample/lorem/random"/>

            <Button
                android:id="@+id/review_button_edit_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/edit_note"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/review_loading_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_above="@id/review_buttons"
        android:visibility="gone"
        tools:visibility="visible"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/review_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/review_button_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
                style="@style/Widget.AppCompat.Button"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/review_buttons_performance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/review_button_easy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/performance_easy"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
                app:backgroundTint="@color/colorReviewEasy"
                style="@style/Widget.AppCompat.Button"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/review_button_medium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/performance_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
                app:backgroundTint="@color/colorReviewMedium"
                style="@style/Widget.AppCompat.Button"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/review_button_hard"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/performance_hard"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
                app:backgroundTint="@color/colorReviewHard"
                style="@style/Widget.AppCompat.Button"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/review_button_failed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/performance_failed"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
                app:backgroundTint="@color/colorReviewFailed"
                style="@style/Widget.AppCompat.Button"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>